--- a/static/styles/courses/course.scss
+++ b/static/styles/courses/course.scss
@@ -158,6 +158,17 @@
     }
   }
 
+  .wizard-header {
+  	display: flex;
+  	flex-direction: row;
+  	align-items: center;
+  	margin: 20px 0;
+
+  	.header-icon {
+  		margin-right: 20px;
+  	}
+  }
+
   .wizard-card{
     padding: 20px;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
