--- a/views/courses/create-course.hbs
+++ b/views/courses/create-course.hbs
@@ -23,7 +23,7 @@
         <section class="section-course">
           <div class="wizard-header">
             <div class="header-icon">
-              <img src="/images/empty-states/shuttle.svg" alt="Space Shuttle Start"/>
+              <img src="/images/empty-states/shuttle.svg" alt="Space Shuttle Start" class="hidden-xs-down"/>
             </div>
             <div class="headlines">
               <h3>{{sectionTitle}}</h3>
@@ -218,22 +218,22 @@
 
             <section data-panel="section-3">
               <div class="final-step">
-                <div class="image">
+                <div class="image hidden-xs-down">
                   <img src="/images/empty-states/add_people.png"/>
                 </div>
                 <div>
                   <h4>Geschafft!</h4>
                   <h5 class="text-muted">Was kann ich in einem Kurs machen?</h5>
-                  <h6 class="text-muted">Themen anlegen</h6>
+                  <h6>Themen anlegen</h6>
                   <h6 class="text-muted">
                     Themen sind in der Schul-Cloud der Container für dein Unterrichtsmaterial.
                   </h6>
-                  <h6 class="text-muted">Aufgaben stellen</h6>
+                  <h6>Aufgaben stellen</h6>
                   <h6 class="text-muted">
                     Innerhalb eines Kurses/Themas kannst du Aufgaben an deine Teilnehmer
                     stellen.
                   </h6>
-                  <h6 class="text-muted">Tools hinzufügen</h6>
+                  <h6>Tools hinzufügen</h6>
                   <h6 class="text-muted">
                     In einem Kurs kannst du außerdem Tools zum interaktiven Unterricht
                   hinzufügen.
