--- a/views/courses/overview-empty.hbs
+++ b/views/courses/overview-empty.hbs
@@ -13,14 +13,14 @@
               <img src="/images/empty-states/lehrer_klasse.png" alt="Noch keine Kurse" class="image mx-auto d-block"/>
               <div class="text-wrapper mx-auto d-block">
                 {{#if isStudent}}
-                  <h2 class="text-center">Mit der {{theme.short_title}} wird der Unterricht digital</h2>
+                  <h2 class="text-center">Mit der {{theme.title}} wird der Unterricht digital</h2>
                   <h5 class="text-muted text-center">
                     Du wurdest noch zu keinem Kurs eingeladen. Lass dich von deinen Lehrkräften zu einem Kurs hinzufügen.
                   </h5>
                 {{else}}
-                  <h2 class="text-center">Mit der {{theme.short_title}} Unterricht digital gestalten</h2>
+                  <h2 class="text-center">Mit der {{theme.title}} Unterricht digital gestalten</h2>
                   <h5 class="text-muted text-center">
-                      Es gibt noch keine Kurse. Ein Kurs in der Schul-Cloud bildet die Grundlage zur Verwaltung von Themen, Aufgaben, Tools und mehr für digitales Lernen.
+                      Es gibt noch keine Kurse. Ein Kurs in der {{theme.short_title}} bildet die Grundlage zur Verwaltung von Themen, Aufgaben, Tools und mehr für digitales Lernen.
                   </h5>
                 {{/if}}
               </div>
