--- a/views/news/overview-empty.hbs
+++ b/views/news/overview-empty.hbs
@@ -6,7 +6,7 @@
       <div class="empty-state">
         <img src="/images/empty-states/news.svg" alt="News mit der {{theme.short_title}} versenden" class="image mx-auto d-block"/>
         <div class="text-wrapper mx-auto d-block">
-          <h2 class="text-center">Mit der {{theme.short_title}} auf dem neuesten Stand bleiben</h2>
+          <h2 class="text-center">Mit der {{theme.title}} auf dem neuesten Stand bleiben</h2>
           <h5 class="text-muted text-center">
             Neuigkeiten sind schulinterne Mitteilungen, die du über die {{theme.short_title}} mit Lehrer*innen und Schüler*innen geteilt werden können.
           </h5>
