--- a/views/courses/components/topics.hbs
+++ b/views/courses/components/topics.hbs
@@ -113,7 +113,7 @@
               Ein Klick auf das Auge macht das Thema sichtbar oder unsichtbar.
             </div>
             <div class="text-muted">
-              Du kannst dein Thema jederzeit bearbeiten, verschieben, löschen oder mit anderen Schul-Cloud Nutzern teilen.
+              Du kannst dein Thema jederzeit bearbeiten, verschieben, löschen oder mit anderen {{theme.short_title}} Nutzern teilen.
               Ein Klick auf das Thema bringt dich in die Vorschau-Ansicht.
             </div>
           </div>
