--- a/views/courses/create-course.hbs
+++ b/views/courses/create-course.hbs
@@ -226,7 +226,7 @@
                   <h5 class="text-muted">Was kann ich in einem Kurs machen?</h5>
                   <h6>Themen anlegen</h6>
                   <h6 class="text-muted">
-                    Themen sind in der Schul-Cloud der Container für dein Unterrichtsmaterial.
+                    Themen sind in der {{theme.short_title}} der Container für dein Unterrichtsmaterial.
                   </h6>
                   <h6>Aufgaben stellen</h6>
                   <h6 class="text-muted">
