--- a/views/homework/components/overview_card_template.hbs
+++ b/views/homework/components/overview_card_template.hbs
@@ -1,6 +1,6 @@
 <li class="card assignment {{this.privateclass}} disableable{{#if this.stats}} has-stats{{/if}}{{#if this.grade}} has-stats{{/if}} {{this.privateclass}}"
     style="border-left:10px solid {{this.color}}">
-    <a class="content" href="{{this.url}}" title="Details der Aufgabe: '{{{escapeQuotes this.name}}}'">
+    <a class="content" href="{{this.url}}" title="Details der Aufgabe: '{{{escapeHtml this.name}}}'">
         <div class="dates">
             {{#if this.availableDate}}{{timeToString availableDate}}<br />{{/if}}
             bis {{timeToString dueDate}}
@@ -8,7 +8,7 @@
     </a>
     {{#if this.stats}}
     <a class="content" href="{{this.url}}#activetabid=submissions"
-        title="Abgaben der Aufgabe: '{{{escapeQuotes this.name}}}'">
+        title="Abgaben der Aufgabe: '{{{escapeHtml this.name}}}'">
         <div class="state">
             <circular-progress class="meinel-progress" primarycolor="#b10438" secondarycolor="#009688"
                 accentcolor="lightgrey" data="{{this.stats.submissionPercentage}}"
@@ -24,7 +24,7 @@
     {{/if}}
     {{#if this.grade}}
     <a class="content" href="{{this.url}}#activetabid=feedback"
-        title="Bewertung der Aufgabe: '{{{escapeQuotes this.name}}}'">
+        title="Bewertung der Aufgabe: '{{{escapeHtml this.name}}}'">
         <div class="state">
             <circular-progress class="meinel-progress" primarycolor="#009688" accentcolor="lightgrey"
                 data="{{this.grade}}" width="70" height="70" data-toggle="tooltip" data-placement="left"
@@ -33,7 +33,7 @@
         </div>
     </a>
     {{/if}}
-    <a class="content" href="{{this.url}}" title="Details der Aufgabe: '{{{escapeQuotes this.name}}}'">
+    <a class="content" href="{{this.url}}" title="Details der Aufgabe: '{{{escapeHtml this.name}}}'">
         <h5 class="title">
             {{#if this.courseId}}
             [<span>{{{stripOnlyScript this.courseId.name}}}</span>{{#if this.isSubstitution}}
@@ -72,12 +72,12 @@
         {{#if this.method}}
         <a class="btn btn-secondary btn-sm {{this.class}}" href="{{this.link}}" target="_blank"
             data-method="{{this.method}}" data-name="{{../../name}}"
-            title="Die Aufgabe: '{{{escapeQuotes ../../name}}}' {{{escapeQuotes this.title}}}.">
+            title="Die Aufgabe: '{{{escapeHtml ../../name}}}' {{{escapeHtml this.title}}}.">
             <i class="fa fa-{{this.icon}}"></i>
         </a>
         {{else}}
         <a class="btn btn-secondary btn-sm {{this.class}}" href="{{this.link}}"
-            title="Die Aufgabe: '{{{escapeQuotes ../../name}}}' {{this.title}}">
+            title="Die Aufgabe: '{{{escapeHtml ../../name}}}' {{this.title}}">
             <i class="fa fa-{{this.icon}}"></i> {{this.label}}
         </a>
         {{/if}}
@@ -85,7 +85,7 @@
         {{/if}}
         {{/userHasPermission}}
     </div>
-    <a href="{{this.url}}" title="Details der Aufgabe: '{{{escapeQuotes this.name}}}'">
+    <a href="{{this.url}}" title="Details der Aufgabe: '{{{escapeHtml this.name}}}'">
         <span class="more">Details ><i className="fa fa-chevron-right" aria-hidden="true"></i></span>
     </a>
 </li>
