--- a/static/styles/courses/course.scss
+++ b/static/styles/courses/course.scss
@@ -177,6 +177,9 @@
     padding: 20px;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
     padding-bottom: 50px;
+    .progressbar{
+      margin-top: 20px;
+    }
     .panels label{
       font-size: .75rem;
     }
