made explanation nicer

--- a/views/courses/components/topics.hbs
+++ b/views/courses/components/topics.hbs
@@ -110,10 +110,10 @@
           <div class="col-xs-12 col-sm-8">
             <h5 class="text-muted">Geschafft - Das erste Thema in deinem Kurs!</h5>
             <div class="text-muted">
-              Ein Klick auf das Auge macht das Thema sichtbar oder unsichtbar.
+              Ein Klick auf das Auge <i class="fa fa-eye"></i> macht das Thema sichtbar oder unsichtbar.
             </div>
             <div class="text-muted">
-              Du kannst dein Thema jederzeit bearbeiten, verschieben, löschen oder mit anderen {{theme.short_title}} Nutzern teilen.
+              Du kannst dein Thema jederzeit bearbeiten <i class="fa fa-pencil"></i>, verschieben <i class="fa fa-ellipsis-v"></i><i class="fa fa-ellipsis-v"></i>, löschen <i class="fa fa-trash-o"></i> oder mit anderen {{theme.short_title}} Nutzern teilen <i class="fa fa-share-alt"></i>.
               Ein Klick auf das Thema bringt dich in die Vorschau-Ansicht.
             </div>
           </div>
