--- a/theme/n21/views/authentication/home.hbs
+++ b/theme/n21/views/authentication/home.hbs
@@ -29,34 +29,9 @@
                     <p>
                         <img src="/images/stecker_homepage.png" alt="Cloud Illustration #1" class="img-fluid w-100">
                     </p>
-                    <p>Ferner enthält die, in der Kabinettssitzung am 05.07.2016 von der Niedersächsische Landesregierung beschlossene
-                        Leitlinie, weitere zentrale Zielsetzungen:</p>
-                    <ul>
-                        <li>Verbindliche Entwicklung von schulischen Medienkonzepten, als integrale Bestandteile der Schulentwicklung.</li>
-                        <li>Verbindliche Integration der Medienbildung in die erste und zweite Phase der Lehrerausbildung und
-                            Lehrerfortbildung
-                        </li>
-                        <li>Bereitstellung digitaler Unterrichtsmaterialien für Lehrkräfte, Schülerinnen und Schüler</li>
-                        <li>Entwicklung von Empfehlungen für die Hardwareausstattung/ IT-Infrastruktur an Schulen sowie für deren
-                            Vernetzung und Wartung vor dem Hintergrund des BYOD-Grundsatzes.</li>
-                        <li>Flächendeckende Einführung einer digitalen Lern- und Arbeitsumgebungen für alle niedersächsischen
-                            Schülerinnen und Schüler</li>
-                    </ul>
-                    <br />
-
-                    <p>Anwendungsszenarien wie Remote Controlled Laboratory, Unterricht mit Videokonferenzsystemen und Planspiele/Simulationen
-                        sind in konzeptioneller Hinsicht für gemeinsame Unterrichtsprojekte bereits in der Projektplanung
-                        berücksichtigt und vorbereitet.</p>
-
-                    <p>Mit dem Team des
-                        <a href="https://schul-cloud.org/">Hasso-Plattner-Instituts</a> wurde eine Entwicklungspartnerschaft eingegangen, da beide Projekte
-                        hinsichtlich der Offensive „#D“ und der „Ziellinie 2020“ identische Zielsetzungen haben und den gleichen,
-                        modular-skalierbaren Ansatz verfolgen. Durch diese Kooperation bietet sich die Chance über das Stadium
-                        des Prototypen hinaus, bereits während der Erprobungsphase eine Plattform zu entwickeln, die langfristig
-                        bundesweit und länderspezifisch effizient eingesetzt werden kann.</p>
-
-
-                    <div class="jumbotron">
+                Weitere Informationen finden Sie an <a href="http://www.n-21.de/staticsite/staticsite.php?menuid=537&topmenu=4">dieser Stelle.</a>
+                   
+				   <div class="jumbotron">
                         Die folgenden Schulen und Studienseminare sind unmittelbar Projekt NBC beteiligt:
                         <ul>
                             <li>BBS 1 Northeim Europa-Schule</li>
