fixed css merge issue

--- a/views/files/files.hbs
+++ b/views/files/files.hbs
@@ -73,7 +73,7 @@
                                 data-file-id="{{../this._id}}"
                                 data-file-name="{{../this.name}}"
                                 >
-                                    <i class="fa fa-share-alt pull-right"></i>
+                                    <i class="fa fa-share-alt directory-icon pull-right"></i>
                                 </a>
                             {{/if}}
                             {{/userHasPermission}}
