überflüssiges css entfernen

--- a/views/files/files-grid.hbs
+++ b/views/files/files-grid.hbs
@@ -8,7 +8,7 @@
                              onclick="location.href='#file-view';
                                      fileViewer('{{this.type}}', '{{this.name}}', '{{this._id}}');">
                             <div class="card-title">
-                                <div class="file-preview-wrapper col-sm-1 no-padding">
+                                <div class="file-preview-wrapper col-sm-1 no-padding hidden-xs-down">
                                     <div class="file-preview"
                                          style="background-image: url({{this.thumbnail}}); -webkit-background-size: 25px ;background-size: 25px;"></div>
                                 </div>
