--- a/views/files/files.hbs
+++ b/views/files/files.hbs
@@ -49,7 +49,7 @@
             								<a href="/files/directory/"
             								   target="_blank"
             								   data-method="delete"
-                                               title="Ordner löschen"
+                               title="Ordner löschen"
             								   data-file-id="{{../this._id}}"
             								   data-file-name="{{{../this.name}}}">
             									<i class="fa fa-trash-o directory-icon pull-right"></i>
@@ -58,10 +58,9 @@
                             <a href="/directoryModel/{{../this._id}}/rename"
             								   target="_blank"
             								   data-method="dir-rename"
-                                               title="Ordner umbenennen"
-                                               data-directory-id="{{../this._id}}"
-            								   data-directory-name="{{../this.name}}"
-            								   >
+                               title="Ordner umbenennen"
+                               data-directory-id="{{../this._id}}"
+            								   data-directory-name="{{../this.name}}">
             									<i class="fa fa-edit directory-icon pull-right"></i>
             								</a>
                             {{#if ../../canEditPermissions}}
@@ -71,9 +70,8 @@
                                 data-method="dir-share"
                                 title="Ordner-Freigabe"
                                 data-file-id="{{../this._id}}"
-                                data-file-name="{{../this.name}}"
-                                >
-                                    <i class="fa fa-share-alt directory-icon pull-right"></i>
+                                data-file-name="{{../this.name}}">
+                                  <i class="fa fa-share-alt directory-icon pull-right"></i>
                                 </a>
                             {{/if}}
                             {{/userHasPermission}}
@@ -95,9 +93,9 @@
                         <div class="col-sm-10 col-xs-16 col-md-8">
                             <div data-toggle="modal">
                                 <div>
-                                        <span class="btn btn-secondary create-directory">
-                                            <i class="fa fa-plus" aria-hidden="true"></i> Neuen Ordner erstellen
-                                        </span>
+                                    <span class="btn btn-secondary create-directory">
+                                        <i class="fa fa-plus" aria-hidden="true"></i> Neuen Ordner erstellen
+                                    </span>
                                     {{#if ../canCreateFile}}
                                         <span class="btn btn-secondary new-file" data-file-path="{{this.path}}">
                                             <i class="fa fa-plus" aria-hidden="true"></i> Neue Datei erstellen
@@ -110,7 +108,6 @@
                 </div>
             </section>
             {{/userHasPermission}}
-
         </div>
     {{/content}}
 {{/extend}}
