--- a/views/teams/team.hbs
+++ b/views/teams/team.hbs
@@ -126,7 +126,7 @@
                 <div class="col-sm-12">
                     <h5 style="padding: 10px 0 20px">Dateien</h5>
                     {{#embed "files/file-viewer"}}{{/embed}}
-                    {{#embed "files/files-grid" files=files teamFiles=true canEditPermissions=canEditPermissions teamId=../_id}}{{/embed}}
+                    {{#embed "files/files-grid" files=files teamFiles=true teamId=../_id}}{{/embed}}
                 </div>
             </section>
 
