svg rotation, beautified success message

--- a/static/styles/courses/course.scss
+++ b/static/styles/courses/course.scss
@@ -202,9 +202,9 @@
     }
   }
 
-  .first-topic{
-    margin-top: 50px;
-    margin-bottom: 20px;
+  .first-topic-success{
+    background-color: #F2F2F2;
+    padding: 20px;
   }
 }
 .course-tasks-header, .course-groups-header {
