--- a/views/courses/components/topics.hbs
+++ b/views/courses/components/topics.hbs
@@ -114,7 +114,7 @@
             <span>Weiteres Thema erstellen</span>
             <i class="fa fa-plus-circle plus-icon pull-right"></i>
           {{else}}
-            <span>Erstelle eine Thema</span>
+            <span>Erstelle ein Thema</span>
           {{/if}}
         </a>
       </div>
