--- a/views/administration/students.hbs
+++ b/views/administration/students.hbs
@@ -42,7 +42,7 @@
                     </div>
                     <div class="row mt-3 mb-1">
                         <p>
-                            <strong>{{ studentsWithoutConsentCount }} von {{ allStudentsCount }}</strong> Schüler in deiner Klasse benötigen noch die Einverständniserklärung zur Nutzung der {{theme.short_title}}.
+                            <strong>{{ studentsWithoutConsentCount }} von {{ allStudentsCount }}</strong> Schüler benötigen noch die Einverständniserklärung zur Nutzung der {{theme.short_title}}.
                             Schüler unter 16 Jahren brauchen zuerst das Einverständnis eines Erziehungsberechtigten, Schüler ab 14 müssen zusätzlich selbst ihr Einverständnis erklären.                        
                         </p>
                     </div>
