fixed wording and spacing

--- a/views/courses/components/topics.hbs
+++ b/views/courses/components/topics.hbs
@@ -13,10 +13,10 @@
         <div class="first-topic-success">
           <h5>Geschafft - Das erste Thema in deinem Kurs!</h5>
           <div>
-            Ein Klick auf das Auge <i class="fa fa-eye"></i> macht das Thema sichtbar oder unsichtbar.
+            Ein Klick auf das Auge <i class="fa fa-eye"></i> macht das Thema für Schüler*Innen sichtbar oder unsichtbar.
           </div>
           <div>
-            Du kannst dein Thema jederzeit bearbeiten <i class="fa fa-pencil"></i>, verschieben <i class="fa fa-ellipsis-v"></i><i class="fa fa-ellipsis-v"></i>, löschen <i class="fa fa-trash-o"></i> oder mit anderen {{theme.short_title}} Nutzern teilen <i class="fa fa-share-alt"></i>.
+            Du kannst dein Thema jederzeit bearbeiten <i class="fa fa-pencil"></i>, umsortieren <i class="fa fa-ellipsis-v"></i>&nbsp;<i class="fa fa-ellipsis-v"></i>, löschen <i class="fa fa-trash-o"></i> oder mit anderen {{theme.short_title}} Nutzern teilen <i class="fa fa-share-alt"></i>.
             Ein Klick auf das Thema bringt dich in die Vorschau-Ansicht.
           </div>
         </div>
