--- a/views/lib/default.hbs
+++ b/views/lib/default.hbs
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="de">
+
 <head>
-    <title>{{#if title}}{{title}} - {{/if}}{{theme.title}}</title>
-	<!--
+    <title>{{#if title}}{{title}} - {{/if}}{{theme.title}} - Deine digitale Lernumgebung</title>
+    <!--
 		01001000 01010000 01001001  01010011 01100011 01101000 01110101 01101100 00101101 01000011 01101100 01101111 01110101 01100100
 		 __  __  ____    ______      _____           __               ___            _____   ___                       __
 		/\ \/\ \/\  _`\ /\__  _\    /\  __`\        /\ \             /\_ \          /\  __`\/\_ \                     /\ \
@@ -21,9 +22,10 @@
         <meta name="apple-mobile-web-app-title" content="{{theme.title}}">
         <meta name="theme-color" content="#b10438">
         <meta name="application-name" content="{{theme.title}}">
-        <meta name="X-Recruiting" content="Das Entwickler-Team der HPI Schul-Cloud sucht nach Verstärkung! Schaut doch mal nach unseren Stellen: http://localhost:3100/community#jobs">
+        <meta name="X-Recruiting"
+            content="Das Entwickler-Team der HPI Schul-Cloud sucht nach Verstärkung! Schaut doch mal nach unseren Stellen: http://localhost:3100/community#jobs">
         <link rel="mask-icon" href="/images/logo/safari-pinned-tab.svg" color="#b10438">
-        <link rel="apple-touch-icon" href= "/images/logo/app-icon-512.png">
+        <link rel="apple-touch-icon" href="/images/logo/app-icon-512.png">
         <link rel="apple-touch-icon" sizes="120x120" href="/images/logo/app-icon-120.png">
         <link rel="apple-touch-icon" sizes="152x152" href="/images/logo/app-icon-152.png">
         <link rel="apple-touch-icon" sizes="167x167" href="/images/logo/app-icon-167.png">
@@ -38,7 +40,8 @@
         <link rel="preload" href="/fonts/ptsans/ptsans-regular.woff" as="font" type="font/woff" crossorigin>
         <link rel="preload" href="/fonts/ptsans/ptsans-bold.woff" as="font" type="font/woff" crossorigin>
         <link rel="preload" href="/fonts/ptsans/ptsans-italic.woff" as="font" type="font/woff" crossorigin>
-        <link rel="preload" href="/vendor-optimized/font-awesome/fonts/fontawesome-webfont.woff2?v=4.7.0" as="font" type="font/woff" crossorigin>
+        <link rel="preload" href="/vendor-optimized/font-awesome/fonts/fontawesome-webfont.woff2?v=4.7.0" as="font"
+            type="font/woff" crossorigin>
         <link rel="stylesheet" href="/fonts/ptsans/ptsans.css" />
         <link rel="stylesheet" href="/styles/lib/base.css" />
     {{/block}}
@@ -49,10 +52,12 @@
     {{/block}}
 
 </head>
+
 <body class="{{#if inline}}window-inline{{/if}}">
     {{#block "body"}}{{/block}}
 
     {{#embed "lib/piwik"}}{{/embed}}
 
 </body>
+
 </html>
