gender and dots

--- a/views/courses/components/groups.hbs
+++ b/views/courses/components/groups.hbs
@@ -28,7 +28,7 @@
             In Gruppen können sich Teilnehmer*innen innerhalb eines Kurses in Teams aufteilen, z.B. für Gruppenarbeiten.
           </h6>
         {{else}}
-          <h4 class="text-muted">Es gibt noch keine Gruppen in diesem Kurs</h4>
+          <h4 class="text-muted">Es gibt noch keine Gruppen in diesem Kurs.</h4>
         {{/userHasPermission}}
       </div>
     {{/ifneq}}
