--- a/views/courses/components/tools.hbs
+++ b/views/courses/components/tools.hbs
@@ -29,7 +29,7 @@
               Füge hier interaktive Tools, wie GeoGebra oder CodeOcean, einem Kurs hinzu.
             </h6>
           {{else}}
-            <h4 class="text-muted">Es gibt noch keine Tools in diesem Kurs</h4>
+            <h4 class="text-muted">Es gibt noch keine Tools in diesem Kurs.</h4>
           {{/userHasPermission}}
         </div>
       {{/if}}
