--- a/views/courses/components/topics.hbs
+++ b/views/courses/components/topics.hbs
@@ -13,7 +13,7 @@
         <div class="first-topic-success">
           <h5>Geschafft - Das erste Thema in deinem Kurs!</h5>
           <div>
-            Ein Klick auf das Auge <i class="fa fa-eye"></i> macht das Thema für Schüler*Innen sichtbar oder unsichtbar.
+            Ein Klick auf das Auge <i class="fa fa-eye"></i> macht das Thema für Schüler*innen sichtbar oder unsichtbar.
           </div>
           <div>
             Du kannst dein Thema jederzeit bearbeiten <i class="fa fa-pencil"></i>, umsortieren <i class="fa fa-ellipsis-v"></i>&nbsp;<i class="fa fa-ellipsis-v"></i>, löschen <i class="fa fa-trash-o"></i> oder mit anderen {{theme.short_title}} Nutzern teilen <i class="fa fa-share-alt"></i>.
@@ -102,7 +102,7 @@
               Ein Thema umfasst eine Unterrichtseinheit oder -stunde innerhalb deines Kurses.
             </h6>
           {{else}}
-            <h4 class="text-muted">Es gibt noch keine Themen in diesem Kurs</h4>
+            <h4 class="text-muted">Es gibt noch keine Themen in diesem Kurs.</h4>
           {{/userHasPermission}}
         </div>
       {{/if}}
