fixed final wording stuff

--- a/views/courses/components/tasks.hbs
+++ b/views/courses/components/tasks.hbs
@@ -13,7 +13,7 @@
           <h4>Erstelle die erste Aufgabe in deinem Kurs</h4>
           <h6 class="sub-title">
             Kursteilnehmer*innen können spielend leicht Aufgaben bis zu einem gesetzten Termin bearbeiten und Ergebnisse digital einreichen.
-            Aufgaben können für einen ganzen Kurs gestellt werden oder für ein einzelnes Thema im Kurs.
+            Aufgaben können für einen ganzen Kurs oder ein einzelnes Thema gestellt werden.
           </h6>
         {{else}}
           <h4 class="text-muted">Es gibt noch keine gestellten Aufgaben in diesem Kurs.</h4>
