align form header

--- a/static/styles/courses/course.scss
+++ b/static/styles/courses/course.scss
@@ -171,7 +171,11 @@
 
   	.header-icon {
   		margin-right: 20px;
-  	}
+    }
+    
+    .subtitle {
+      margin-bottom: 0;
+    }
   }
 
   .wizard-card{
