--- a/views/courses/create-course.hbs
+++ b/views/courses/create-course.hbs
@@ -27,7 +27,7 @@
             </div>
             <div class="headlines">
               <h3>{{sectionTitle}}</h3>
-              <p class="text-muted">
+              <p class="text-muted subtitle">
                 In einem Kurs wird gemeinsam mit den Teilnehmern an Themen, Hausaufgaben und Dateien gearbeitet.
               </p>
             </div>
