Change new releases redirect
request from @JacquelineThorns

--- a/views/lib/forms/form-features.hbs
+++ b/views/lib/forms/form-features.hbs
@@ -8,7 +8,7 @@
     </div>
 </div>
 <div style="text-align: center; padding-top: 8px;">
-    <a href="/help/#changelog">
+    <a href="/help/releases">
     <button class="btn btn-primary btn-add" style="width: 95%;">
         Hier klicken
     </button>
