--- a/views/courses/add-tool.hbs
+++ b/views/courses/add-tool.hbs
@@ -44,6 +44,7 @@
 					<input type="hidden" name="url" value="{{url}}" id="ltiUrl" />
 					<input type="hidden" name="secret" value="{{secret}}" />
 					<input type="hidden" name="courseId" value="{{courseId}}" data-force-value="true" />
+					<input type="hidden" name="privacy_permission" value="{{privacy_permission}}" />
 				{{/content}}
 			{{/embed}}
             {{/userHasPermission}}
