--- a/views/courses/forms/form-tools.hbs
+++ b/views/courses/forms/form-tools.hbs
@@ -33,3 +33,5 @@
 <input type="hidden" name="url" value="{{url}}" />
 <input type="hidden" name="secret" value="{{secret}}" />
 <input type="hidden" name="courseId" value="{{courseId}}" data-force-value="true" />
+<input type="hidden" name="oAuthClientId" value="{{oAuthClientId}}" />
+<input type="hidden" name="privacy_permission" value="{{privacy_permission}}" />
